--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 	<title>d3 тест</title>
+
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
+<div id="fon">
+	<div id="target"></div>
+</div>
 <form>
-	<input type="number" id="one" value="10">
-	<input type="number" id="two" value="20">
+	<input type="number" id="done" value="10" class="inp"> <input type="number" id="need" value="20" class="inp">
 </form>
-
-<div id="target"></div>
-
 <script type="text/javascript" src="jquery-1.9.1.js"></script>
 <script type="text/javascript" src="d3.js"></script>
 <script type="text/javascript" src="onload.js"></script>
