--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 	<title>d3 тест</title>
 
 	<link rel="stylesheet" href="style.css"/>
+
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+	<script type="text/javascript" src="d3.js"></script>
+	<script type="text/javascript" src="onload.js"></script>
 </head>
 <body>
 
@@ -13,8 +19,5 @@
 <form>
 	<input type="number" id="done" value="10" class="inp"> <input type="number" id="need" value="20" class="inp">
 </form>
-<script type="text/javascript" src="jquery-1.9.1.js"></script>
-<script type="text/javascript" src="d3.js"></script>
-<script type="text/javascript" src="onload.js"></script>
 </body>
 </html>
