--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id="target"></div>
 </div>
 <form>
-	<input type="number" id="done" value="10" class="inp"> <input type="number" id="need" value="20" class="inp">
+	<input type="number" id="P1_V_02" value="10" class="inp"> <input type="number" id="P1_V_03" value="20" class="inp">
 </form>
 </body>
 </html>
